# tcltk-cmake

./: CMakeLists.txt  main.c
cmake/: import_external_libs.cmake
